--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-	android:versionCode="13" android:versionName="2.0.2 - 24 Apr 2016" package="de.blankedv.lanbahnpanel">
-	<uses-sdk android:minSdkVersion="13" android:targetSdkVersion="20" />
+	android:versionCode="13" android:versionName="2.0.3 - 02 May 2016" package="de.blankedv.lanbahnpanel">
 	<uses-permission android:name="android.permission.INTERNET" />
 	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 	<uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
@@ -15,6 +14,10 @@
 			<intent-filter>
 				<action android:name="android.intent.action.MAIN" />
 				<category android:name="android.intent.category.LAUNCHER" />
+				<data android:scheme="http" />
+				<data android:scheme="https" />
+				<data android:host="www.lanbahn.net" />
+
 			</intent-filter>
 		</activity>
         <activity android:name="de.blankedv.lanbahnpanel.Preferences" android:label="@string/app_name">
