--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,8 +1,15 @@
 apply plugin: 'com.android.application'
 android {
+    signingConfigs {
+        config {
+            keyAlias 'lanbahn-panel-key'
+            keyPassword 'andro4panel1'
+            storeFile file('/home/mblank/android-export/andropanel-keystore')
+            storePassword 'andro4panel1'
+        }
+    }
     compileSdkVersion 20
     buildToolsVersion "21.1.2"
-
     defaultConfig {
         applicationId "de.blankedv.lanbahnpanel"
         minSdkVersion 13
@@ -12,7 +19,6 @@ android {
             targetCompatibility JavaVersion.VERSION_1_5
         }
     }
-
     buildTypes {
         release {
             minifyEnabled false
