--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,23 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-	android:versionCode="13" android:versionName="2.0.3 - 02 May 2016" package="de.blankedv.lanbahnpanel">
+	android:versionCode="14" android:versionName="2.0.4 - 03 Dec 2016" package="de.blankedv.lanbahnpanel">
 	<uses-permission android:name="android.permission.INTERNET" />
 	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 	<uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
 	<uses-permission android:name="android.permission.CHANGE_WIFI_MULTICAST_STATE" />
 	<uses-permission android:name="android.permission.WRITE_SETTINGS" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-	<application android:icon="@drawable/andropanel22" android:allowBackup="true"
+	<application android:icon="@drawable/andropanel" android:allowBackup="true"
 		android:label="@string/app_name"  android:noHistory="true"  android:name="de.blankedv.lanbahnpanel.LanbahnPanelApplication">
 		<activity android:name="de.blankedv.lanbahnpanel.LanbahnPanelActivity"
 			android:label="@string/app_name" android:screenOrientation="landscape">
 			<intent-filter>
-				<action android:name="android.intent.action.MAIN" />
-				<category android:name="android.intent.category.LAUNCHER" />
+			<action android:name="android.intent.action.MAIN" />
+			<category android:name="android.intent.category.LAUNCHER" />
+			</intent-filter>
+			<intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
 				<data android:scheme="http" />
 				<data android:scheme="https" />
 				<data android:host="www.lanbahn.net" />
-
 			</intent-filter>
 		</activity>
         <activity android:name="de.blankedv.lanbahnpanel.Preferences" android:label="@string/app_name">
