--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,9 +8,10 @@ android {
     }
     compileSdkVersion 25
     buildToolsVersion '27.0.3'
+    useLibrary 'org.apache.http.legacy'
     defaultConfig {
         applicationId "de.blankedv.lanbahnpanel"
-        minSdkVersion 13
+        minSdkVersion 15
         targetSdkVersion 25
         compileOptions {
             sourceCompatibility JavaVersion.VERSION_1_7
@@ -28,6 +29,7 @@ android {
         targetCompatibility JavaVersion.VERSION_1_7
     }
 }
-
 dependencies {
+    implementation 'com.android.support:support-v4:25.3.1'
+
 }
