--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,13 +6,13 @@ android {
             storeFile file('/home/mblank/android-export/andropanel-keystore')
         }
     }
-    compileSdkVersion 25
+    compileSdkVersion 27
     buildToolsVersion '27.0.3'
     useLibrary 'org.apache.http.legacy'
     defaultConfig {
         applicationId "de.blankedv.lanbahnpanel"
         minSdkVersion 15
-        targetSdkVersion 25
+        targetSdkVersion 27
         compileOptions {
             sourceCompatibility JavaVersion.VERSION_1_7
             targetCompatibility JavaVersion.VERSION_1_7
@@ -30,6 +30,7 @@ android {
     }
 }
 dependencies {
-    implementation 'com.android.support:support-v4:25.3.1'
+    implementation 'com.android.support:support-v4:27.1.1'
+    implementation "com.android.support:support-compat:27.1.1"
 
 }
