--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,10 +27,13 @@ android {
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_7
         targetCompatibility JavaVersion.VERSION_1_7
+
     }
 }
 dependencies {
     implementation 'com.android.support:support-v4:27.1.1'
     implementation "com.android.support:support-compat:27.1.1"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation "org.jetbrains.anko:anko:$anko_version"
 
 }
