--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,10 @@
 apply plugin: 'com.android.application'
+apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-android-extensions'
+apply plugin: 'kotlin-kapt'
+
 android {
+
     signingConfigs {
         config {
             keyAlias 'lanbahn-panel-key'
@@ -35,5 +40,7 @@ dependencies {
     implementation "com.android.support:support-compat:27.1.1"
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation "org.jetbrains.anko:anko:$anko_version"
+    implementation 'com.android.support:appcompat-v7:27.1.1'
+    implementation 'com.android.support:support-vector-drawable:27.1.1'
 
 }
