--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,20 +10,21 @@
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <uses-permission android:name="android.permission.CHANGE_WIFI_MULTICAST_STATE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-
     <application
         android:name=".LanbahnPanelApplication"
         android:allowBackup="true"
         android:icon="@drawable/andropanel"
         android:label="@string/app_name"
-        android:noHistory="true">
+        android:noHistory="true"
+        android:hardwareAccelerated="true"
+        android:supportsRtl="true"
+        android:theme="@style/AppTheme" >
+
         <activity
             android:name=".LanbahnPanelActivity"
-            android:label="@string/app_name"
-            android:screenOrientation="landscape">
+            android:screenOrientation="landscape" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
             <intent-filter>
@@ -52,7 +53,7 @@
         </activity>
 
         <service
-            android:name=".LoconetService"
+            android:name="de.blankedv.lanbahnpanel.LoconetService"
             android:enabled="true"
             android:exported="true">
 
