--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
 
-    ext.kotlin_version = '1.2.50'
+    ext.kotlin_version = '1.2.41'
     ext.anko_version = '0.10.4'
 
 
@@ -9,6 +9,7 @@ buildscript {
         jcenter()
         google()
     }
+
     dependencies {
         classpath 'com.android.tools.build:gradle:3.1.3'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
@@ -20,4 +21,9 @@ allprojects {
     repositories {
         jcenter()
     }
+}
+
+
+task clean(type: Delete) {
+    delete rootProject.buildDir
 }
