--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,7 @@
         android:theme="@style/AppTheme" >
 
         <activity
-            android:name=".LanbahnPanelActivity"
+            android:name=".view.LanbahnPanelActivity"
             android:screenOrientation="landscape" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -34,7 +34,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".Preferences"
+            android:name=".view.Preferences"
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.preferences" />
@@ -43,7 +43,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".AboutActivity"
+            android:name=".view.AboutActivity"
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.about" />
