--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
     <application
         android:name=".model.LanbahnPanelApplication"
         android:allowBackup="true"
-        android:icon="@drawable/andropanel"
+        android:icon="@drawable/ic_launcher_lanbahn"
         android:label="@string/app_name"
         android:noHistory="true"
         android:hardwareAccelerated="true"
