--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,13 +36,12 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".view.Preferences"
-            android:label="@string/app_name">
-            <intent-filter>
-                <action android:name="android.intent.action.preferences" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+            android:name=".settings.SettingsActivity"
+            android:label="@string/title_activity_settings"
+            android:parentActivityName=".view.LanbahnPanelActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="de.blankedv.lanbahnpanel.settings.SettingsActivity" />
         </activity>
         <activity
             android:name=".view.AboutActivity"
