--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,5 +42,6 @@ dependencies {
     implementation "org.jetbrains.anko:anko:$anko_version"
     implementation 'com.android.support:appcompat-v7:27.1.1'
     implementation 'com.android.support:support-vector-drawable:27.1.1'
+    implementation 'com.google.code.gson:gson:2.8.0'
 
 }
