--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,15 +2,15 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="de.blankedv.lanbahnpanel"
     android:exported="true"
-    android:versionCode="28"
-    android:versionName="2.4.11 (KT) - 10 Aug 2018">
+    android:versionCode="29"
+    android:versionName="2.4.12 (KT) - 19 Aug 2018">
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
-    <uses-permission android:name="android.permission.CHANGE_WIFI_MULTICAST_STATE" />
+    <!-- <uses-permission android:name="android.permission.CHANGE_WIFI_MULTICAST_STATE" /> -->
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-    <!--<uses-permission android:name="android.permission.VIBRATE"/>-->
+    <!-- <uses-permission android:name="android.permission.VIBRATE"/>-->
 
     <application
         android:name=".model.LanbahnPanelApplication"
