--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,6 +17,7 @@ android {
         applicationId "de.blankedv.lanbahnpanel"
         minSdkVersion 15
         targetSdkVersion 27
+        buildToolsVersion '28.0.3'
         compileOptions {
             sourceCompatibility JavaVersion.VERSION_1_7
             targetCompatibility JavaVersion.VERSION_1_7
@@ -39,14 +40,14 @@ android {
         targetCompatibility JavaVersion.VERSION_1_7
 
     }
+
 }
 dependencies {
     implementation 'com.android.support:support-v4:27.1.1'
-    implementation "com.android.support:support-compat:27.1.1"
+    implementation 'com.android.support:support-compat:27.1.1'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation "org.jetbrains.anko:anko:$anko_version"
     implementation 'com.android.support:appcompat-v7:27.1.1'
     implementation 'com.android.support:support-vector-drawable:27.1.1'
-    implementation 'com.google.code.gson:gson:2.8.1'
-
+    implementation 'com.google.code.gson:gson:2.8.2'
 }
