--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,8 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="de.blankedv.lanbahnpanel"
     android:exported="true"
-    android:versionCode="56"
-    android:versionName="2.5.26 (KT) - 16 Mar 2019">
+    android:versionCode="57"
+    android:versionName="2.6.0 - 2 Apr 2019">
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
@@ -48,7 +48,14 @@
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.about" />
-
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name=".view.HelpActivity"
+            android:label="@string/app_name">
+            <intent-filter>
+                <action android:name="android.intent.action.help" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
